# lumenary

docker/: docker_add_dockergroup.md
git/: git-gitfilterrepo.md
python/: pyproject.toml  python_class.py  python_class_human.py  python_decorator.py  python_descriptor.py  python_descriptor1.py  sqlalchemy-options.py
sql/: pg-show-fks.sql
