[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "ipython>=9.13.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "off"
